<resources>
    <string name="app_name">BookEazy</string>
    <string name="title_activity_login">Library</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="LoginPage">Login</string>
    <string name="usernamehint">Email Id</string>
    <string name="Passwordhint">Password</string>
    <string name="Button">Login</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="signUpName">Name</string>
    <string name="signUpEmail">E-mail Id</string>
    <string name="signUpMobile">Mobile Number</string>
    <string name="signUpPasswordConfirmHint">Confirm Password</string>
    <string name="signUpButton">SUBMIT</string>
    <string name="itemTextHolder">Item Text</string>
    <string name="mainActivityLogout">Logout</string>
    <string name="editStudent">Edit Student Info</string>
    <string name="editfaculty">Edit Faculty Info</string>
    <string name="editbook">Edit Book Info</string>
    <string name="signUpPage">SignUp</string>
    <string name="toolbarTitle">Bookeazy</string>
    <string name="resetPassword">Reset Password</string>
    <string name="newPasswordHint">New Password</string>
    <string name="confirmNewPassword">Confirm New Password</string>
    <string name="resetPasswordBtn">Reset</string>
    <string name="issueStudent">Issue To Student</string>
    <string name="issueFaculty">Issue To Faculty</string>
    <string name="returnStudent">Return by Student</string>
    <string name="returnfaculty">Return By Faculty</string>
    <string name="Fine">Fine Amount</string>
    <string name="showBook">Show Books</string>
    <string name="showHistory">Show History</string>
    <string name="studentHistory">Students issue history</string>
    <string name="facultyHistory">Faculty issue history</string>
    <string name="showStudents">Show Students</string>
    <string name="showFaculty">Show Faculty</string>
    <string name="editaccountinfoTitle">Edit Account Info</string>
    <string name="confirmDetails">Enter Credentials To Proceed</string>
</resources>
