<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/logintoolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue700"
        android:elevation="4dp"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/AlertDialog.AppCompat.Light" />


    <Button
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:text="@string/editStudent"
        android:textColor="#ffffff"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"
        />
    <Button
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:text="@string/editfaculty"
        android:textColor="#ffffff"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:text="@string/editbook"
        android:textColor="#ffffff"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"
        />




</LinearLayout>